Fix background overflow with navbar wrap

--- a/css/main.css
+++ b/css/main.css
@@ -13,11 +13,19 @@ body, html {
   body {
     background-image: url("/img/lake_smallest.webp");
   }
+
+  nav {
+    flex-direction: column;
+  }
 }
 
 @media (width > 1080px) {
   body {
     background-image: url("/img/lake_smaller.webp");
+  }
+
+  nav {
+    flex-direction: row;
   }
 }
 
@@ -31,6 +39,7 @@ body {
   flex-direction: column;
   align-items: center;
   align-items: stretch;
+  min-width: 100vh;
 }
 
 #content {
@@ -56,8 +65,8 @@ footer {
 }
 
 nav {
-  width: 100%;
-  min-height: 50px;
+  max-width: 100vw;
+  min-height: 5vh;
   display: flex;
 }
 
@@ -67,12 +76,12 @@ nav a {
   text-decoration: none;
   display: flex;
   text-align: center;
-  justify-content: center;
   align-items: center;
   font-size: x-large;
-  width: 20%;
-  padding: 0% 10%;
+  flex-basis: 100%;
   transition: 0.4s;
+  justify-content: center;
+  padding: 1% 0%;
 }
 
 nav a:hover {
